# quirks-path

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  tests.rs  url.rs  windows.rs
