[package]
name = "quirks_path"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust path library with quirks that is as platform-agnostic as possible."

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(rust_comp_feature, values("unstable_features"))',
] }

[features]
default = ["url"]
url = ["dep:url"]

[dependencies]
cfg_rust_features = "0.1.2"
nom = "8"
percent-encoding = "2"
thiserror = "1"
url = { version = "2", optional = true }
